--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
+@import url(./vendor/normalize.css);
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 :root {
   --grey: "#696969";
