--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 @import url(./vendor/normalize.css);
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url(./assets//styles/variables.css);
 
 body {
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
