style: finish styling

--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -1,8 +1,8 @@
 :root {
-  --grey: "#696969";
-  --light-grey: "#D9DBDA";
-  --yellow: "#FFD200";
-  --gold: "#FFD300";
-  --corduroy: "#5F7465";
-  --tapa: "#727270";
+  --grey: #696969;
+  --light-grey: #D9DBDA;
+  --yellow: #FFD200;
+  --gold: #FFD300;
+  --corduroy: #5F7465;
+  --tapa: #727270;
 }
