--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 @import url(./vendor/normalize.css);
 @import url(./assets//styles/variables.css);
 
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
